// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUI Structure/> Actions: renders the simplest actions with no extra settings passed 1`] = `
<div
  className="xui-actions xui-actions-layout"
  primary={
    <XUIButton
      isDisabled={false}
      isExternalLink={false}
      isGrouped={false}
      isLink={false}
      isLoading={false}
      retainLayout={true}
      size="standard"
      tabIndex={0}
      type="button"
      variant="standard"
    >
      Primary
    </XUIButton>
  }
  secondary={
    <XUIButton
      isDisabled={false}
      isExternalLink={false}
      isGrouped={false}
      isLink={false}
      isLoading={false}
      retainLayout={true}
      size="standard"
      tabIndex={0}
      type="button"
      variant="standard"
    >
      Secondary
    </XUIButton>
  }
>
  Testing 💩
</div>
`;

exports[`<XUI Structure/> Content block and content block item renders content block item tag position description by default 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout xui-contentblockitem-rowlink xui-contentblockitem-has-top-radius xui-contentblockitem-has-bottom-radius"
  >
    <div
      className="xui-contentblockitem--leftcontent"
    >
      <abbr
        className="xui-avatar xui-avatar-color-2"
        role="presentation"
      >
        P
      </abbr>
    </div>
    <div
      className="xui-contentblockitem--maincontent"
      href={undefined}
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
        <span
          className="xui-contentblockitem--secondaryheading"
        >
          test secondary heading
        </span>
      </div>
      <div
        className="xui-contentblockitem--description"
      >
        <span
          className="xui-tag xui-tag-positive xui-margin-left-small"
        >
          Positive
        </span>
      </div>
    </div>
    <div
      className="xui-contentblockitem--rightcontent"
    >
      <div
        className="xui-contentblockitem--pinnedvalue"
      >
        0.00
      </div>
      <button
        className="xui-button xui-button-icon"
        data-automationid={undefined}
        disabled={false}
        onClick={[Function]}
        onKeyDown={undefined}
        tabIndex={0}
        type="button"
      >
        <div
          className="xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon"
            data-automationid={undefined}
            focusable="false"
            height={13}
            viewBox="0 0 3 13"
            width={3}
          >
            <path
              d="M1.5 3a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0-5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
              role="presentation"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<XUI Structure/> Content block and content block item renders content block item tag position inline 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout xui-contentblockitem-rowlink xui-contentblockitem-has-top-radius xui-contentblockitem-has-bottom-radius"
  >
    <div
      className="xui-contentblockitem--leftcontent"
    >
      <abbr
        className="xui-avatar xui-avatar-color-2"
        role="presentation"
      >
        P
      </abbr>
    </div>
    <div
      className="xui-contentblockitem--maincontent"
      href={undefined}
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
        <span
          className="xui-contentblockitem--secondaryheading"
        >
          test secondary heading
        </span>
        <span
          className="xui-tag xui-tag-positive xui-margin-left-small"
        >
          Positive
        </span>
      </div>
    </div>
    <div
      className="xui-contentblockitem--rightcontent"
    >
      <div
        className="xui-contentblockitem--pinnedvalue"
      >
        0.00
      </div>
      <button
        className="xui-button xui-button-icon"
        data-automationid={undefined}
        disabled={false}
        onClick={[Function]}
        onKeyDown={undefined}
        tabIndex={0}
        type="button"
      >
        <div
          className="xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon"
            data-automationid={undefined}
            focusable="false"
            height={13}
            viewBox="0 0 3 13"
            width={3}
          >
            <path
              d="M1.5 3a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0-5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
              role="presentation"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<XUI Structure/> Content block and content block item renders content block item tag position right 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout xui-contentblockitem-rowlink xui-contentblockitem-has-top-radius xui-contentblockitem-has-bottom-radius"
  >
    <div
      className="xui-contentblockitem--leftcontent"
    >
      <abbr
        className="xui-avatar xui-avatar-color-2"
        role="presentation"
      >
        P
      </abbr>
    </div>
    <div
      className="xui-contentblockitem--maincontent"
      href={undefined}
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
        <span
          className="xui-contentblockitem--secondaryheading"
        >
          test secondary heading
        </span>
      </div>
    </div>
    <div
      className="xui-contentblockitem--rightcontent"
    >
      <span
        className="xui-tag xui-tag-positive xui-margin-left-small"
      >
        Positive
      </span>
      <div
        className="xui-contentblockitem--pinnedvalue"
      >
        0.00
      </div>
      <button
        className="xui-button xui-button-icon"
        data-automationid={undefined}
        disabled={false}
        onClick={[Function]}
        onKeyDown={undefined}
        tabIndex={0}
        type="button"
      >
        <div
          className="xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon"
            data-automationid={undefined}
            focusable="false"
            height={13}
            viewBox="0 0 3 13"
            width={3}
          >
            <path
              d="M1.5 3a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0-5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
              role="presentation"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<XUI Structure/> Content block and content block item renders content block item with everything 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout xui-contentblockitem-rowlink xui-contentblockitem-has-top-radius xui-contentblockitem-has-bottom-radius"
  >
    <div
      className="xui-contentblockitem--leftcontent"
    >
      <abbr
        className="xui-avatar xui-avatar-color-2"
        role="presentation"
      >
        P
      </abbr>
    </div>
    <div
      className="xui-contentblockitem--maincontent"
      href={undefined}
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
        <span
          className="xui-contentblockitem--secondaryheading"
        >
          test secondary heading
        </span>
      </div>
      <div
        className="xui-contentblockitem--description"
      >
        <span
          className="xui-tag xui-tag-positive xui-margin-left-small"
        >
          Positive
        </span>
      </div>
    </div>
    <div
      className="xui-contentblockitem--rightcontent"
    >
      <div
        className="xui-contentblockitem--pinnedvalue"
      >
        0.00
      </div>
      <button
        className="xui-button xui-button-icon"
        data-automationid={undefined}
        disabled={false}
        onClick={[Function]}
        onKeyDown={undefined}
        tabIndex={0}
        type="button"
      >
        <div
          className="xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon"
            data-automationid={undefined}
            focusable="false"
            height={13}
            viewBox="0 0 3 13"
            width={3}
          >
            <path
              d="M1.5 3a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0-5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
              role="presentation"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<XUI Structure/> Content block and content block item renders content block with content block item child and headings 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout"
  >
    <div
      className="xui-contentblockitem--maincontent"
      href={undefined}
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<XUI Structure/> Content block and content block item renders the base content block with no children 1`] = `
<div
  className="xui-contentblock"
/>
`;

exports[`<XUI Structure/> Overview block and section: renders the base overview block with no extra settings passed 1`] = `
<div
  className="xui-overview xui-overview-has-border xui-overview-has-dividers xui-overview-solid xui-overview-text-align-center xui-overview-layout"
/>
`;

exports[`<XUI Structure/> Overview block and section: renders the base overview block with sections, children, sentiments, and options 1`] = `
<div
  className="xui-overview xui-overview-text-align-left xui-overview-layout"
>
  <section
    className="xui-overview--section"
  >
    <div
      className="xui-overview--label"
    >
      standard
    </div>
    <div
      className="xui-overview--value"
    >
      100.23
    </div>
    test child content
  </section>
  <section
    className="xui-overview--section"
  >
    <div
      className="xui-overview--label"
    >
      positive
    </div>
    <div
      className="xui-overview--value xui-textcolor-positive"
    >
      100.23
    </div>
    test child content
  </section>
  <section
    className="xui-overview--section"
  >
    <div
      className="xui-overview--label"
    >
      negative
    </div>
    <div
      className="xui-overview--value xui-textcolor-negative"
    >
      100.23
    </div>
    test child content
  </section>
  <section
    className="xui-overview--section"
  >
    <div
      className="xui-overview--label"
    >
      muted
    </div>
    <div
      className="xui-overview--value xui-textcolor-muted"
    >
      100.23
    </div>
    test child content
  </section>
</div>
`;

exports[`<XUI Structure/> PageHeader and Breadcrumb: renders extra pageHeader classes that are passed in 1`] = `
<header
  className="testClass xui-pageheading"
>
  <div
    className="xui-pageheading--content xui-pageheading--content-layout testClassTwo"
  >
    <h1
      className="xui-pageheading--title"
    >
      Testing 💩
    </h1>
  </div>
</header>
`;

exports[`<XUI Structure/> PageHeader and Breadcrumb: renders pageHeader containing Breadcrumb from nodes 1`] = `
<header
  className="xui-pageheading"
>
  <div
    className="xui-pageheading--content xui-pageheading--content-layout"
  >
    <ol
      className="xui-pageheading--breadcrumbs xui-breadcrumbs"
    >
      <li
        className="xui-breadcrumb"
      >
        <span
          className="xui-breadcrumb--link"
          onClick={[Function]}
          role="link"
        >
          hello
        </span>
      </li>
      <li
        className="xui-breadcrumb-arrow"
      >
        <div
          className="xui-breadcrumb--icon xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon xui-icon-rotate-270"
            data-automationid={undefined}
            focusable="false"
            height={4}
            viewBox="0 0 7 4"
            width={7}
          >
            <path
              d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
              role="presentation"
            />
          </svg>
        </div>
      </li>
      <li
        className="xui-breadcrumb"
      >
        <span
          className="xui-breadcrumb--link"
          onClick={[Function]}
          role="link"
        >
          hello
        </span>
      </li>
      <li
        className="xui-breadcrumb-arrow"
      >
        <div
          className="xui-breadcrumb--icon xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon xui-icon-rotate-270"
            data-automationid={undefined}
            focusable="false"
            height={4}
            viewBox="0 0 7 4"
            width={7}
          >
            <path
              d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
              role="presentation"
            />
          </svg>
        </div>
      </li>
      <li
        className="xui-breadcrumb"
      >
        <span
          className="xui-breadcrumb--link"
        >
          yo
        </span>
      </li>
    </ol>
  </div>
</header>
`;

exports[`<XUI Structure/> PageHeader and Breadcrumb: renders the simplest pageHeader with no extra settings passed 1`] = `
<header
  className="xui-pageheading"
>
  <div
    className="xui-pageheading--content xui-pageheading--content-layout"
  >
    <h1
      className="xui-pageheading--title"
    >
      Testing 💩
    </h1>
  </div>
</header>
`;

exports[`<XUI Structure/> Panel and panel section: renders a panel with all the bells and whistles 1`] = `
<div
  className="xui-panel xui-panel-has-sidebar"
>
  <div
    className="xui-panel--sidebar"
  >
    <ul
      className="xui-picklist xui-picklist-layout xui-picklist-standard"
      data-automationid={undefined}
      id={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      role="group"
    >
      <li
        aria-label={undefined}
        aria-selected={null}
        className="xui-pickitem xui-pickitem-standard"
        data-automationid={undefined}
        id="1"
        role="option"
      >
        <button
          className="xui-pickitem--body"
          data-automationid={undefined}
          onClick={undefined}
          onKeyDown={undefined}
          onMouseOver={undefined}
          rel={null}
          tabIndex={undefined}
          type="button"
        >
          <span
            className="xui-pickitem--text"
          >
            Tab 1
          </span>
        </button>
      </li>
      <li
        aria-label={undefined}
        aria-selected={null}
        className="xui-pickitem xui-pickitem-is-selected xui-pickitem-standard"
        data-automationid={undefined}
        id="2"
        role="option"
      >
        <button
          className="xui-pickitem--body"
          data-automationid={undefined}
          onClick={undefined}
          onKeyDown={undefined}
          onMouseOver={undefined}
          rel={null}
          tabIndex={undefined}
          type="button"
        >
          <span
            className="xui-pickitem--text"
          >
            Tab 2
          </span>
        </button>
      </li>
      <li
        aria-label={undefined}
        aria-selected={null}
        className="xui-pickitem xui-pickitem-standard"
        data-automationid={undefined}
        id="3"
        role="option"
      >
        <button
          className="xui-pickitem--body"
          data-automationid={undefined}
          onClick={undefined}
          onKeyDown={undefined}
          onMouseOver={undefined}
          rel={null}
          tabIndex={undefined}
          type="button"
        >
          <span
            className="xui-pickitem--text"
          >
            This is tab 3
          </span>
        </button>
      </li>
    </ul>
  </div>
  <div
    className="xui-panel--main"
  >
    <header
      className="xui-panel--heading xui-panel--header xui-panel--heading-layout"
    >
      Hello there
    </header>
    <div
      className="xui-panel--section xui-padding-large"
    >
      <div
        className="xui-panel--section--header test-header-class"
      >
        I'm a section header
      </div>
      <p>
        Some important text might go here.
      </p>
    </div>
    <div
      className="xui-panel--section xui-padding-large"
    >
      <p>
        Other critical info would go here.
      </p>
    </div>
    <footer
      className="xui-padding-small xui-panel--footer"
    >
      <div
        className="xui-actions xui-actions-layout"
        primary={
          <XUIButton
            isDisabled={false}
            isExternalLink={false}
            isGrouped={false}
            isLink={false}
            isLoading={false}
            retainLayout={true}
            size="standard"
            tabIndex={0}
            type="button"
            variant="standard"
          >
            Primary
          </XUIButton>
        }
        secondary={
          <XUIButton
            isDisabled={false}
            isExternalLink={false}
            isGrouped={false}
            isLink={false}
            isLoading={false}
            retainLayout={true}
            size="standard"
            tabIndex={0}
            type="button"
            variant="standard"
          >
            Secondary
          </XUIButton>
        }
      />
    </footer>
  </div>
</div>
`;

exports[`<XUI Structure/> Panel and panel section: renders panel in a different tag, if supplied 1`] = `
<caption
  className="xui-panel"
>
  Content here
</caption>
`;

exports[`<XUI Structure/> Panel and panel section: renders the base panel with no extra settings passed 1`] = `
<div
  className="xui-panel"
>
  Content here
</div>
`;

exports[`<XUI Structure/> Panel and panel section: renders the panel section with no extra settings passed 1`] = `
<div
  className="xui-panel--section"
>
  Content here
</div>
`;

exports[`<XUI Structure/> Rows and columns: renders the base column with no extra settings passed 1`] = `
<div
  className="xui-column-12-of-12"
>
  Testing 💩
</div>
`;

exports[`<XUI Structure/> Rows and columns: renders the base row with no extra settings passed 1`] = `
<div
  className="xui-row"
>
  Testing 💩
</div>
`;

exports[`<XUI Structure/> Rows and columns: renders the column with wide and medium column widths, if provided 1`] = `
<div
  className="xui-column-12-of-12 xui-column-3-of-12-medium xui-column-6-of-12-wide"
>
  Testing 💩
</div>
`;
